--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "growl": ">=1.10.0",
+    "https-proxy-agent": ">=2.2.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1",
-    "growl": ">=1.10.0",
-    "https-proxy-agent": ">=2.2.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@types/jest": "^23.1.4",
