--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es5",
     "module": "esnext",
     "strict": true,
+    "strictNullChecks": true,
     "jsx": "react",
     "jsxFactory": "h",
     "importHelpers": true,
